# A-Fortran-Electronic-Structure-Program

./: .gitignore  CMakeLists.txt  LICENSE  README.md  els.x  make.sh
Project#01/fortran/: Makefile  els.x  geom_read_in.f90  geom_utils.f90  main.F90  parallel.F90
Project#03/fortran/: Makefile  els.x  geom_utils.f90  main.F90  read_in_integrals.f90  system.f90
Project#03/fortran/src/: hf.f90  linalg.f90  read_in_integrals.f90
dat/: els.in
dat/1.00_104.45/: els.out
dat/1.20_104.45/: els.out
dat/1.40_104.45/: els.out
dat/water-def2-svp/: water-def2-svp.psi4out
dat/water-def2-svp/1.00_104.45/: els.in
dat/water-def2-svp/1.60_104.45/: els.out
sample_data/f2-cc-pvdz/1.75_0.00/: els.in  els.out
sample_data/h2o-cc-pvdz/1.80_104.45/: els.in  ref_out
sample_data/h2o-cc-pvtz/2.00_104.45/: cpu.out  els.in  els_cpu.out  els_cpu_1thread.out  els_gpu.out
sample_data/n2-cc-pvdz/2.00_0.00/: els.in  els.out
src/: ccsd.f90  const.F90  error_handling.f90  geometry.f90  hf.f90  integrals.f90  linalg.f90  linalg.fpp  main.F90  mp2.f90  read_in_integrals.f90  system.f90
utils/: ccsd-python.ipynb  els.in  els_noread.in  els_wrapper.py  psi4_integrals.py  psi4_integrals_nosym.py  run_gamess.py
